# noobGit

./: .coderabbit.yaml  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: automerge.yml  ci.yml  release.yml
core/: Cargo.toml
core/src/: error.rs  explain.rs  identity.rs  lib.rs  model.rs  ops.rs  repo.rs  safety.rs  test_support.rs  undo.rs
scripts/: check_handlers.py  check_type_contract.py  gen-icon.cjs
src/: App.tsx  api.ts  main.tsx  styles.css  test-setup.ts  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/__tests__/: api.test.ts
src/components/: AheadBehindBadge.tsx  BlameView.tsx  BranchPanel.tsx  ChangeBadge.tsx  CommandPalette.tsx  CommitDiffViewer.tsx  CommitGraph.tsx  ConfirmDialog.tsx  ConflictWizard.tsx  DiffPanel.tsx  EmptyState.tsx  ExplainTooltip.tsx  FileContextMenu.tsx  FileHistoryView.tsx  GitignoreModal.tsx  HighlightedCode.tsx  HistoryPanel.tsx  IdentityDialog.tsx  InlineDiff.tsx  LfsGuideDialog.tsx  NetworkErrorDialog.tsx  OnboardingWizard.tsx  RebaseWizard.tsx  RemotePanel.tsx  ResizableColumns.tsx  SensitiveWarningDialog.tsx  SettingsDialog.tsx  ShortcutHelpDialog.tsx  SkeletonPanels.tsx  StashPanel.tsx  StatusBadge.tsx  StatusPanel.tsx  SyncBadge.tsx  TagPanel.tsx  ThemeToggle.tsx  Toaster.tsx  UndoTimeline.tsx  WelcomeScreen.tsx
src/hooks/: useGlobalShortcuts.ts
src/i18n/: index.tsx
(+4 files in other folders)
