[workspace]
resolver = "2"
members = ["core", "src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/noan98/noobgit"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.20"
thiserror = "1"
