[package]
name = "noobgit-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ジュニアエンジニアが安心して使えるGitツール noobGit のコアロジック"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
git2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
